--- a/static/A.html
+++ b/static/A.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1> Hi, My name is Peter Griffin</h1>
-<img src = "/static/images/Peter_Griffin.png">
+<img src = "/static/images/Peter_Griffin.png" alt="Peter Griffin" title="Peter Griffin">
 <br>
 <a href="http://127.0.0.1:5000/a"> Clich here to go A </a><br>
 <a href="http://127.0.0.1:5000/b"> Clich here to go B </a><br>
