--- a/static/B.html
+++ b/static/B.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1> Hi, My name is Lois Griffin</h1>
-<img src = "/static/images/Lois_Griffin.png">
+<img src = "/static/images/Lois_Griffin.png" alt="Lois Griffin" title="Lois Griffin">
 <br>
 <a href="http://127.0.0.1:5000/b"> Clich here to go B </a><br>
 <a href="http://127.0.0.1:5000/d"> Clich here to go D </a><br>
