--- a/static/C.html
+++ b/static/C.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1> Hi, My name is Brian Griffin</h1>
-<img src = "/static/images/Brian_Griffin.png">
+<img src = "/static/images/Brian_Griffin.png" alt="Brain Griffin" title="Brain Griffin">
 <br>
 <a href="http://127.0.0.1:5000/c"> Clich here to go C </a><br>
 <a href="http://127.0.0.1:5000/a"> Clich here to go A </a><br>
