--- a/static/imagesearch.html
+++ b/static/imagesearch.html
@@ -3,23 +3,22 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content=width=device-width, initial-scale=1.0">
-<title>Web Search </title>
+<title>Image Search Engine </title>
  <link rel="stylesheet" href="./static/style.css">
 
 <body>
 
 <div class="container"> 
 
-<h1>Web a Search Field</h1>
+<h1>Image Search Engine </h1>
 
-<form method="post" action="/websearch">
+<form method="post" action="/search_images">
   <label for="search">Search:</label>
   <input type="search"  name="query">
   <input type="submit">
 </form>
-<a href="/imagesearch"> Search  Images</a><bR>
+<a href="/"> Search  Web</a><br>
 <a href="/reverseimagesearch">Reverse Image Search </a>
-
 </div>
 
 </body>
