--- a/static/D.html
+++ b/static/D.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1> Hi, My name is Stewie Griffin</h1>
-<img src = "/static/images/Stewie_Griffin.png">
+<img src = "/static/images/Stewie_Griffin.png" alt="Stewie Griffin" title="Stewie Griffin">
 <br>
 <a href="http://127.0.0.1:5000/d"> Clich here to go D </a><br>
 <a href="http://127.0.0.1:5000/c"> Clich here to go C </a>
