--- a/static/E.html
+++ b/static/E.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1> Hi, My name is Glenn</h1>
-<img src = "/static/images/Glenn_Quagmire.png">
+<img src = "/static/images/Glenn_Quagmire.png" alt="Glenn Quagmire" title="Glenn Quagmire">
 <br>
 <a href="http://127.0.0.1:5000/e"> Clich here to go E </a><br>
 <a href="http://127.0.0.1:5000/a"> Clich here to go A </a><br>
